fix z-index on ui-dialog to be greater the bootstrap header

--- a/src/main/web/css/dipnet.css
+++ b/src/main/web/css/dipnet.css
@@ -92,6 +92,10 @@ div.toggle-content {
     color: #7a868e;
 }
 
+.ui-front {
+    z-index: 1001;
+}
+
 .ui-widget {
     font-size: .9em;
 }
